force-app/main/default/objects/JBCXM__GSRelationshipType__c/JBCXM__GSRelationshipType__c.object-meta.xml
<CustomObject>
    <label>Relationship Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>