force-app/main/default/objects/JBCXM__GSRelationshipType__c/fields/JBCXM__Active__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>