force-app/main/default/objects/JBCXM__GSRelationshipType__c/fields/JBCXM__Attributes__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Attributes__c</fullName>
    <label>Attributes</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>