force-app/main/default/objects/JBCXM__GSRelationshipType__c/fields/JBCXM__Definition__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Definition__c</fullName>
    <label>Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>