force-app/main/default/objects/JBCXM__GSRelationshipType__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>