force-app/main/default/objects/JBCXM__GSRelationshipType__c/fields/JBCXM__LayoutAttribute__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LayoutAttribute__c</fullName>
    <label>Layout Attribute</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>