force-app/main/default/objects/JBCXM__GSRelationshipType__c/fields/JBCXM__LayoutCriteria__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LayoutCriteria__c</fullName>
    <label>Layout Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>