force-app/main/default/objects/JBCXM__GSRelationshipType__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__Active__c</columns>
    <columns>JBCXM__Attributes__c</columns>
    <columns>JBCXM__CardConfig__c</columns>
    <columns>JBCXM__Definition__c</columns>
    <columns>JBCXM__Description__c</columns>
    <columns>JBCXM__DisplayOrder__c</columns>
    <columns>JBCXM__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>